--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,11 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpmime</artifactId>
+      <version>4.5.2</version>
+    </dependency>
   </dependencies>
 
   <repositories>
