--- a/src/main/resources/dev/jdbc.properties
+++ b/src/main/resources/dev/jdbc.properties
@@ -12,3 +12,8 @@ redis.port=6379
 redis.password=root
 redis.database=1
 redis.maxWaitMillis=10000
+
+#MongoDb\u914d\u7f6e
+mongo.database=am20160326
+mongo.host=192.168.2.124
+mongo.port=27017
