--- a/src/main/resources/production/app.properties
+++ b/src/main/resources/production/app.properties
@@ -1,5 +1,5 @@
 app.name=\u6d4b\u8bd5\u7cfb\u7edf
-
+app.base.package=com.tsingda.simple
 app.download.file.path=/download/
 app.upload.file.temp=/updaload_file_temp/
 
